Completed Version 1 of InvoQ app

--- a/src/Header.css
+++ b/src/Header.css
@@ -37,6 +37,12 @@ li {
   list-style: none;
 }
 
+@media print {
+  .noPrint {
+    display: none !important;
+  }
+}
+
 .address-box {
   font-size: 14px;
   font-weight: 600;
