--- a/src/components/NewMpo.css
+++ b/src/components/NewMpo.css
@@ -25,6 +25,9 @@
 
 .innerDiv2 {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .outerDiv2 .innerDiv2 table {
@@ -49,7 +52,6 @@
   outline: none;
   font-size: 10px;
   color: rgb(0, 0, 0);
-  width: 200px;
   height: 100px;
   box-sizing: border-box;
   font-size: 12px;
@@ -61,7 +63,6 @@
   outline: none;
   font-size: 10px;
   color: rgb(0, 0, 0);
-  width: 200px;
   height: 100px;
   display: flex;
   align-items: center;
